function clear in js script, new style in css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <h1 id="title">Etch a Sketch</h1>
 
-    <main class="buttons">
+    <main class="container"></main>
+
+    <div class="buttons">
         <button id="color">Color</button>
         <button id="rainbow">Rainbow</button>
         <button id="clear">Clear</button>
-    </main>
-
-    <div class="container"></div>
-    
+    </div>
+ 
 </body>
 </html>
